--- a/index.html
+++ b/index.html
@@ -1,74 +1,367 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Les gâteaux</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
-        
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="" />
+  <meta name="author" content="Shorouk Abdelaziz" />
+  <title>très sucré</title>
 
-        <!-- Third party plugin CSS-->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-
-        <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-
-        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <!-- Material Design Bootstrap -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.16.0/css/mdb.min.css" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
+  <!-- animate -->
+  <link rel="stylesheet" href="./css/animate.css">
+  <!-- Animat on scroll -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!-- Favicon-->
+  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
+  <!-- Font Awesome icons (free version)-->
+  <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+  <!-- Google fonts-->
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
 
 
-    </head>
-    <body id="page-top">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
-            <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">Les gâteaux</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
-                    </ul>
-                </div>
+  <!-- Third party plugin CSS-->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
+  <!-- Core theme CSS (includes Bootstrap)-->
+  <link href="./css/styles.css" rel="stylesheet" />
+  <link href="./css/thumbnail-gallery.css" rel="stylesheet" />
+
+
+
+</head>
+
+<body id="page-top">
+  <!-- Navigation-->
+  <nav class=" navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+    <div class="container">
+      <a class=" navbar-brand js-scroll-trigger" href="#page-top"> <img class="logo img-fluid" src="./assets/images/logo.png" alt="très sucré"></a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+        aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto my-2 my-lg-0">
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a></li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#order">Order</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- hero header -->
+  <header id="home" class=" v-header ">
+    <div class=" fullscreen-video-wrap">
+      <video src="assets/images/01.mp4" autoplay loop>hero header</video>
+    </div>
+    <div class="header-overlay">
+    </div>
+    <div class="fadeInDown header-content container d-flex flex-column align-items-center justify-content-center" data-aos="fade-up">
+
+
+      <h1><img class="logo-main img-fluid" src="./assets/images/logo1.png" alt="très sucré">très sucré</h1>
+      <h2>Homemade cakes for Everyone by Myranda Malik</h2>
+    </div>
+
+  </header>
+  <!-- End hero header -->
+  <div class="virtical-space-20"></div>
+  <div class="virtical-space-20"></div>
+
+  <main>
+
+    <!-- about section -->
+    <section id="about">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-xs-12 col-lg-6 order-lg-2">
+            <div data-aos="zoom-in-left" class="imgs-grid p-2">
+              <!-- <div class="myranda img-fluid rounded-circle"></div> -->
+              <img class="top img-fluid rounded-circle" src="./assets/images/01.jpeg" alt="">
+              <img class="bottom img-fluid rounded-circle" src="./assets/images/02.jpeg" alt="">
+
+
+
+
             </div>
-        </nav>
-        <header id="home" class= " v-header ">
-          <div class=" fullscreen-video-wrap">
-            <video src="assets/images/1.mp4"  autoplay loop>hero header</video>
           </div>
-          <div class="header-overlay">
+          <div data-aos="zoom-in-right" class="col-xs-12 col-lg-6 order-lg-1">
+            <div class="p-2">
+              <h3>We Bake Happiness...</h3>
+              <p>
+                Hi, I am Myranda, and "trés sucré" is my little dream turned into reality.
+I started out by catering for small events held by family and friends. Soon after, I opened my place, and ever since I have been working to bake happiness for everyone!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
 
+    </section>
+    <!-- End about section -->
+    <div class="virtical-space-20"></div>
+
+    <section id="gallery">
+      <div class=" gallery-container container">
+
+        <div class="row">
+          <div class="col-lg-6 col-xs-12">
+            <h3>We Bake Love...</h3>
+          </div>
+        </div>
+
+        <div class="tz-gallery">
+
+          <div class="row">
+
+            <div data-aos="flip-up" class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                <a class="lightbox" href="./assets/images/products/01.jpeg">
+                  <img src="./assets/images/products/01.jpeg" alt="Park">
+                </a>
+                <!-- <div class="caption">
+                                    <h3>Thumbnail label</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                </div> -->
+              </div>
+            </div>
+            <div data-aos="flip-up" data-aos-delay="20" class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                <a class="lightbox" href="./assets/images/products/02.jpeg">
+                  <img src="./assets/images/products/02.jpeg" alt="Bridge">
+                </a>
+                <!-- <div class="caption">
+                                    <h3>Thumbnail label</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                </div> -->
+              </div>
+            </div>
+            <div data-aos="flip-up" data-aos-delay="40" class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                <a class="lightbox" href="./assets/images/products/03.jpeg">
+                  <img src="./assets/images/products/03.jpeg" alt="Tunnel">
+                </a>
+                <!-- <div class="caption">
+                                    <h3>Thumbnail label</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                </div> -->
+              </div>
+            </div>
+            <div data-aos="flip-up" data-aos-delay="60" class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                <a class="lightbox" href="./assets/images/products/04.jpeg">
+                  <img src="./assets/images/products/04.jpeg" alt="Coast">
+                </a>
+                <!-- <div class="caption">
+                                    <h3>Thumbnail label</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                </div> -->
+              </div>
+            </div>
+            <div data-aos="flip-up" data-aos-delay="80" class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                <a class="lightbox" href="./assets/images/products/05.jpeg">
+                  <img src="./assets/images/products/05.jpeg" alt="Rails">
+                </a>
+                <!-- <div class="caption">
+                                    <h3>Thumbnail label</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                </div> -->
+              </div>
+            </div>
+            <div data-aos="flip-up" data-aos-delay="100" class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                <a class="lightbox" href="./assets/images/products/06.jpeg">
+                  <img src="./assets/images/products/06.jpeg" alt="cake">
+                </a>
+                <!-- <div class="caption">
+                                    <h3>Thumbnail label</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                </div> -->
+              </div>
+            </div>
+
+            <div data-aos="flip-up" data-aos-delay="120" class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                <a class="lightbox" href="./assets/images/products/08.jpg">
+                  <img src="./assets/images/products/08.jpg" alt="cake">
+                </a>
+                <!-- <div class="caption">
+                                    <h3>Thumbnail label</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                </div> -->
+              </div>
+            </div>
+            <div data-aos="flip-up" data-aos-delay="140" class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                <a class="lightbox" href="./assets/images/products/09.jpg">
+                  <img src="./assets/images/products/09.jpg" alt="cake">
+                </a>
+                <!-- <div class="caption">
+                                    <h3>Thumbnail label</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                </div> -->
+              </div>
+            </div>
+            <div data-aos="flip-up" data-aos-delay="160" class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                <a class="lightbox" href="./assets/images/products/07.jpg">
+                  <img src="./assets/images/products/07.jpg" alt="cake">
+                </a>
+                <!-- <div class="caption">
+                                    <h3>Thumbnail label</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                </div> -->
+              </div>
+            </div>
           </div>
 
+        </div>
 
-        </header>
+      </div>
 
-        <main  >
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
+      <script>
+        baguetteBox.run('.tz-gallery');
+      </script>
 
-          <section id="portfolio" >
+    </section>
+
+    <div class="virtical-space-20"></div>
+    <div class="virtical-space-20"></div>
+
+    <section id="services" class="services section-bg">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 col-xs-12">
+            <h3>We're happy to...</h3>
+          </div>
+        </div>
+
+
+        <div class="row">
+          <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in">
+            <div class="icon-box icon-box-pink">
+              <img src="./assets/images/services/01.jpg" alt="">
+              <h4>Free Deliver</h4>
+              <p class="description">We will deliver all your orders any where in Cairo for free</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="100">
+            <div class="icon-box icon-box-cyan">
+              <img src="./assets/images/services/02.jpg" alt="">
+              <h4>Customize a Cake</h4>
+              <p class="description">You can design your own pice of art and we'll be happy to make it.</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
+            <div class="icon-box icon-box-green">
+              <img src="./assets/images/services/03.jpg" alt="">
+              <h4>Cater</h4>
+              <p class="description">Wedding, Birthday, Graduation, or even just a family gathering? whaterver your event is. we are happy to cater it.</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Services Section -->
+
+    <div class="virtical-space-20"></div>
+    <div class="virtical-space-20"></div>
+
+    <section id="order">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-xs-12 col-md-4 align-self-center"  data-aos="fade-right"      data-aos-offset="300"      data-aos-easing="ease-in-sine">
+            <div>
+              <p>Call us now on</p>
+              <h2><span><i class="fas fa-phone-volume"></i></span>19663</h2>
+              <p>
+                Or visit our store at<br>
+                The First Mall<br>
+                35 Giza Street - Inside Four Seasons Hotel, Giza District, 11432
+              </p>
+
+              <p class="hours">
+                We're happy to serve you everyday<br> from  9am to 9pm
+              </p>
+
+              <p class="social">
+                <a href="#" class="twitter"><i class="fab fa-twitter "></i></a>
+                <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
+              </p>
 
 
 
 
-
-          </section>
-        </main>
+            </div>
 
 
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
+          </div>
+          <div class="col-xs-12 col-md-8"  >
+            <div class="mapouter">
+              <div class="gmap_canvas"><iframe width="100%" height="100%" id="gmap_canvas" src="https://maps.google.com/maps?q=the%20first%20mall&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                  href="https://www.divi-discount.com">divi samples</a></div>
+              <style>
+                .mapouter {
+                  position: relative;
+                  text-align: right;
+                  height: 100%;
+                  width: 100%;
+                }
+
+                .gmap_canvas {
+                  overflow: hidden;
+                  background: none !important;
+                  height: 100%;
+                  width: 100%;
+                }
+              </style>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </section>
+
+  </main>
+
+
+  <!-- Footer -->
+  <footer class="py-5 ">
+    <div class="container">
+      <p data-aos="fade-up"  class="m-0 text-center text-white small">
+        <a href="#page-top"> <img class="logo-large img-fluid" src="./assets/images/logo2.png" alt="très sucré"></a>
+          <br>
+        © très sucré pastry shop 2020</p>
+    </div>
+  </footer>
+
+  <!-- Core theme JS-->
+  <!-- Bootstrap core JS-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+  <!-- Third party plugin JS-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+  <!-- MDB core JavaScript -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.16.0/js/mdb.min.js"></script>
+  <!-- Core theme JS-->
+  <script src="js/scripts.js"></script>
+  <!-- animate on scroll -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+
+
+
 </html>
