--- a/index.html
+++ b/index.html
@@ -54,11 +54,8 @@
   <!-- hero header -->
   <header id="home" class=" v-header ">
     <div class=" fullscreen-video-wrap">
-      <video id="vid" src="assets/images/01.mp4" autoplay loop>hero header</video>
+      <video id="vid" src="assets/images/01.mp4" autoplay muted loop>hero header</video>
     </div>
-    <script>
-    document.getElementById('vid').play();
-</script>
     <div class="header-overlay">
     </div>
     <div class="fadeInDown header-content container d-flex flex-column align-items-center justify-content-center" data-aos="fade-up">
